Fix tag content overflowing beyond container - now scrollbar appears

--- a/less/forum.less
+++ b/less/forum.less
@@ -36,9 +36,10 @@
       background: @body-bg;
       right: 0;
       bottom: 0;
-      padding: 20px;
+      padding: 10px 20px;
       border: 1px solid @muted-color;
       border-radius: 0 @border-radius @border-radius @border-radius;
+      overflow-y: auto;
     }
 
     [type=radio]:checked ~ label {
